--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,4 @@
+@import "~/scss/variables.scss";
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
@@ -131,17 +132,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #007bff !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #007bff !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #007bff;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #007bff;
 }
